# solys2

./: .gitignore  .readthedocs.yaml  NEWS.md  README.md  requirements.txt  setup.cfg
doc/: solys2_components.uxf
docs/: introduction.md  requirements.txt  structure.md  usage.md
docs/img/: solys2_components.uxf
docs/source/: conf.py  index.rst  installation.md  introduction.md  modules.rst  solys2.automation.rst  solys2.rst  structure.md  usage.md
orig_matlab/: Intra_cfg.m  KippSolys_cmd.m  LunarAzEl.m  Tracker_cmd.m  example.m
src/solys2/: __init__.py  autotrack.py  calibration.py  common.py  connection.py  positioncalc.py  response.py  solys2.py
src/solys2/automation/: __init__.py  autohelper.py  autotrack.py  calibration.py  positioncalc.py
src/solys2_moon/: connection.py  solys2_moon.py
src/solys2_moon.egg-info/: PKG-INFO  SOURCES.txt
src/solys2moon/: __init__.py  automoon.py  autotrack.py  connection.py  response.py  solys2.py  solys2moon.py
tests/: sandbox.py  solcalculator.py  solys2sim.py
