[metadata]
name = solys2
version = 0.1.0
author = Group of Atmospheric Optics (GOA-UVa), Universidad de Valladolid
author_email = gaton@goa.uva.es
description = Solys2 interface and automatic tracking functions.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GOA-UVa/solys2
project_urls =
    Bug Tracker = https://github.com/GOA-UVa/solys2/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
include_package_data = True

install_requires = 
    numpy>=1.22.2
    pylunar>=0.6.0
    pysolar>=0.10
    ephem>=4.1.3
    spicedmoon>=0.1.2

[options.packages.find]
where = src
